feature: Read More
1. Add "Read More" button in the index page

--- a/_posts/2019-01-30-why-blog.md
+++ b/_posts/2019-01-30-why-blog.md
@@ -12,6 +12,8 @@ title: Why blog?
 
 我心目中一个好的博客应该是**一个简洁而不简陋，记录和阅读的良好场所**。
 
+<!--more-->
+
 它不需要有太多功能，我最看重的不过是以下几条：
 * Markdown语法<br/>
 大大免除了html排版的繁琐，同时可以更多关注于文字内容本身，而不是其表现形式。
