--- a/_posts/2019-02-08-fpga-all.md
+++ b/_posts/2019-02-08-fpga-all.md
@@ -55,7 +55,7 @@ graph TD;
     D -- Bitstream --> E["Physical Level"];
 </div>
 
-* **高层次综合**(high-level synthesis, HLS)：将高级程序语言C/C++编译为Verilog等[硬件描述语言]({% post_url 2019-02-08-hll-and-hdl %})
+* **高层次综合**(high-level synthesis, HLS)：将高级程序语言C/C++编译为Verilog等[硬件描述语言(HDL)]({% post_url 2019-02-08-hll-and-hdl %})
 * **逻辑综合**(logic synthesis)：将HDL较为高层的逻辑结构转化为逻辑门/网表(netlist)，指明连接关系
 * 实施(implementation)：Electronic Design Interchange Format(EDIF)
 	- 转译(translate)：将所有网表及限制整合入一个大的平的(flat)网表，没有层次结构(hierarchy)
@@ -82,15 +82,20 @@ graph TD;
 * ...
 
 ## FPGA的现状与未来
-FPGA发展到现在要解决的问题依然是**效率(productivity)**的问题，即如何让硬件工程师**更快更好**地编写调试硬件，甚至让软件工程师也能参与到硬件设计中，实现软硬件协同设计(hardware software co-design)
+FPGA为什么尚未像GPU一样大范围推广？
+* [HDL]({% post_url 2019-02-08-hll-and-hdl %})难学 -> 高层抽象，新的语言/[高层次综合]({% post_url 2019-02-12-hls %})
+* 编译时间长，效率低下 -> 改进编译的算法
+* 难以调试 -> 需要高效且正确的模拟器
 
-关于FPGA的未来，在[FCCM](http://www.fccm.org/past/2016/previous.html)上有一个专门的预测栏目，最近的有在2016年预测2021年的
+FPGA发展到现在要解决的问题依然是**效率(productivity)**的问题，即如何让硬件工程师**更快更好**地编写调试硬件，甚至让软件工程师也能参与到硬件设计中，实现软硬件协同设计(hardware software co-design)。
 
+关于FPGA的未来，在[FCCM](http://www.fccm.org/past/2016/previous.html)上有一个专门的预测栏目，最近的有在2016年预测2021年的。
 
 ## 参考资料
 1. 如何评价微软在数据中心使用 FPGA 代替传统 CPU 的做法？ - 李博杰的回答 - 知乎 <https://www.zhihu.com/question/24174597/answer/138717507>
 2. <https://www.design-reuse.com/articles/7330/fpga-programming-step-by-step.html>
 3. <https://indico.desy.de/indico/event/7001/session/0/contribution/1/material/slides/0.pdf>
-4. Scott Hauck and André Dehon, Reconfigurable Computing - The Theory and Practice of FPGA-Based Computation, Elsevier, 2008, [Online](https://www.sciencedirect.com/book/9780123705228/reconfigurable-computing#book-description)
+4. Scott Hauck and André Dehon, *Reconfigurable Computing - The Theory and Practice of FPGA-Based Computation*, Elsevier, 2008, [Online](https://www.sciencedirect.com/book/9780123705228/reconfigurable-computing#book-description)
 5. <https://www.edgefx.in/fpga-architecture-applications/>
-6. Farooq, U. et al., Tree-based Heterogeneous FPGA Architectures Application Specific Exploration and Optimization, Springer, 2012, [Online](http://www.springer.com/978-1-4614-3593-8)
+6. Farooq, U. et al., *Tree-based Heterogeneous FPGA Architectures Application Specific Exploration and Optimization*, Springer, 2012, [Online](http://www.springer.com/978-1-4614-3593-8)
+7. LegUp Computing Inc., *LegUp User Manual (v5.1) - User Guide*, 2017
