--- a/_posts/2019-02-09-Halide.md
+++ b/_posts/2019-02-09-Halide.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: 缘生Halide
-tag: pl
+tag: [pl, graph]
 ---
 
 这篇文章主要谈谈由Halide这门图像处理领域专用语言(Domain Specific Language, DSL)中衍生出来的故事。
-关于DSL的内容则下次再谈。
+关于DSL的内容则请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
 
 ## 语言(language)与框架(framework)的区别
 * 编程语言主要是一系列的语法语义规则
@@ -231,9 +231,30 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
 ![Experimental results]({{"/assets/images/TVM/GraphIt-Exp.PNG"|absolute_url}})
 
 ## Spatial
+### 简介
+> TODO
+
 ## TVM
+详情见[Tensor Virtual Machine]({% post_url 2019-02-08-TVM %})
+
+## 总结
+两种设计DSL的方法
+* 一种依赖于宿主语言
+    - Halide依赖于C++编译到汇编/cuda
+    - Chisel依赖于Scala编译到Verilog
+* 一种做更高层的抽象
+    - GraphIt直接编译为C++
+    - Spatial直接编译为Chisel
+
+GraphIt主要做了抽象，编译优化做得很少
+
+更加详细关于DSL的内容请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
+
 
 ## 参考资料
 1. Jonathan Ragan-Kelley (MIT), Connelly Barnes, Andrew Adams, Sylvain Paris, Frédo Durand, and Saman Amarasinghe, *Halide: A Language and Compiler for Optimizing Parallelism, Locality, and Recomputation in Image Processing Pipelines*, PLDI, 2013
 2. Yunming Zhang (MIT), Mengjiao Yang, Riyadh Baghdadi, Shoaib Kamil, Julian Shun, and Saman Amarasinghe, *GraphIt: A High-Performance Graph DSL*, OOPSLA, 2018
-3. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
+3. David Koeplinger (Stanford), Christos Kozyrakis, Kunle Olukotun, et al., *Spatial: A Language and Compiler for Application Accelerators*, PLDI, 2018
+4. Tianqi Chen (UW), Thierry Moreau, Ziheng Jiang, Lianmin Zheng, Eddie Yan, Arvind Krishnamurthy, et al., *TVM: An Automated End-to-End Optimizing Compiler for Deep Learning*, OSDI, 2018
+
+6. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
