--- a/_posts/2019-02-09-Halide.md
+++ b/_posts/2019-02-09-Halide.md
@@ -230,11 +230,10 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
 结果是碾压式吊打，1为最快的框架
 ![Experimental results]({{"/assets/images/TVM/GraphIt-Exp.PNG"|absolute_url}})
 
-## Spatial
-### 简介
-> TODO
+## Spatial[3]
+详情见[高级编程语言vs硬件描述语言]({% post_url 2019-02-08-hll-and-hdl %})
 
-## TVM
+## TVM[4]
 详情见[Tensor Virtual Machine]({% post_url 2019-02-08-TVM %})
 
 ## 总结
@@ -246,15 +245,17 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
     - GraphIt直接编译为C++
     - Spatial直接编译为Chisel
 
-GraphIt主要做了抽象，编译优化做得很少
+各自的评价
+* Halide做得最好，全平台，大量优化，调度与计算分离
+* Chisel做得最烂，抽象比较弱，但是相比起传统HDL来说已经非常好了
+* GraphIt主要做了抽象，编译优化做得很少
+* Spatial做了大量优化，但是没有将设计与计算分离，或者是隐性分离了(?)
 
 更加详细关于DSL的内容请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
-
 
 ## 参考资料
 1. Jonathan Ragan-Kelley (MIT), Connelly Barnes, Andrew Adams, Sylvain Paris, Frédo Durand, and Saman Amarasinghe, *Halide: A Language and Compiler for Optimizing Parallelism, Locality, and Recomputation in Image Processing Pipelines*, PLDI, 2013
 2. Yunming Zhang (MIT), Mengjiao Yang, Riyadh Baghdadi, Shoaib Kamil, Julian Shun, and Saman Amarasinghe, *GraphIt: A High-Performance Graph DSL*, OOPSLA, 2018
 3. David Koeplinger (Stanford), Christos Kozyrakis, Kunle Olukotun, et al., *Spatial: A Language and Compiler for Application Accelerators*, PLDI, 2018
 4. Tianqi Chen (UW), Thierry Moreau, Ziheng Jiang, Lianmin Zheng, Eddie Yan, Arvind Krishnamurthy, et al., *TVM: An Automated End-to-End Optimizing Compiler for Deep Learning*, OSDI, 2018
-
-6. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
+5. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
