--- a/_posts/2019-02-09-Halide.md
+++ b/_posts/2019-02-09-Halide.md
@@ -248,7 +248,7 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
 各自的评价
 * Halide做得最好，全平台，大量优化，调度与计算分离
 * Chisel做得最烂，抽象比较弱，但是相比起传统HDL来说已经非常好了
-* GraphIt主要做了抽象，编译优化做得很少
+* GraphIt主要做了抽象，调度与计算分离，编译优化做得很少
 * Spatial做了大量优化，但是没有将设计与计算分离，或者是隐性分离了(?)
 
 更加详细关于DSL的内容请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
