--- a/_posts/2019-02-12-hls.md
+++ b/_posts/2019-02-12-hls.md
@@ -5,11 +5,29 @@ tag: [fpga, hls]
 ---
 
 ## 简介
-高层次综合(High-Level Synthesis, HLS)目标是将高级编程语言转化为硬件描述语言。
+高层次综合(High-Level Synthesis, HLS)目标是将高级编程语言(High-Level Languages, HLL)编写的程序转化为硬件描述语言(Hardware Description Language, HDL)的程序。
+
+<div class="mermaid">
+graph TD;
+    A["HLL (C/C++)"] --> B["Allocation"];
+    B --> C["Scheduling"];
+    C --> D["Binding"];
+    D --> E["HDL (Verilog/VHDL)"];
+</div>
 
 注意与传统编译不同，[硬件描述语言]({% post_url 2019-02-08-hll-and-hdl %})并不用于编程，它直接**描述**了硬件电路。
 
 <!--more-->
+
+* 分配(Allocation)：确定必要的硬件资源(几个加法/乘法/寄存器)
+* 调度(Scheduling)：每一个时间周期内应执行什么操作
+* 绑定(Binding)：将硬件指派到每一个操作上
+
+## 高层次综合的优势
+* 自动实现高级语言到硬件语言的转换，使软硬件工程师可以在同一层面交流
+* 针对软件工程师数量远大于硬件工程师的现状，HLS使软件工程师也可以参与到硬件开发中来
+* 通过优化，设计出占用资源更少、运算速度更快的硬件
+* 开发硬件更加高效，容易编写，少bugs，容易维护，贴近自然语言，可读性高
 
 ## 高层次综合与传统编译的区别
 * CPU/GPU都是冯诺依曼架构，需要指令译码并执行(Assembly/PTX)；而FPGA是非冯/并行架构，不需指令，要做的就是用**硬件描述语言将电路图描述出来**
