--- a/_posts/2019-02-08-TVM.md
+++ b/_posts/2019-02-08-TVM.md
@@ -57,3 +57,5 @@ TVM在2018年末开了[第一届TVM会议](https://sampl.cs.washington.edu/tvmco
 1. Tianqi Chen (UW), et al., *TVM: An Automated End-to-End Optimizing Compiler for Deep Learning*, OSDI, 2018
 2. Thierry Moreau (UW), et al., *VTA: An Open Hardware-Software Stack for Deep Learning*, arxiv:1807.04188v1, 2018
 3. Tao B. Schardl (MIT), et al., *Tapir: Embedding Fork-Join Parallelism into LLVM's Intermediate Representation*, PPoPP best paper, 2017
+4. <https://github.com/dmlc/tvm/issues/151>
+5. Deep Learning的IR“之争” - 唐杉的文章 - 知乎 <https://zhuanlan.zhihu.com/p/29254171>
