--- a/_posts/2019-02-09-Halide.md
+++ b/_posts/2019-02-09-Halide.md
@@ -7,11 +7,6 @@ tag: [pl, graph]
 这篇文章主要谈谈由Halide这门图像处理领域专用语言(Domain Specific Language, DSL)中衍生出来的故事。
 关于DSL的内容则请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
 
-## 语言(language)与框架(framework)的区别
-* 编程语言主要是一系列的语法语义规则
-* [框架]({% post_url 2019-01-31-deep-learning-and-graph-analytics-frameworks %})
-则是用现成的编程语言写成的一些库(library)/工具(tool)的集合，提供API接口，重用性高(reusable)，避免重复造轮子，可以直接调用
-
 <!--more-->
 
 ## Halide [1]
@@ -221,7 +216,7 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
 编译到C++，目前不支持多后端
 * 自动加同步设施
 * 可自定义自己的优化pass
-* 自动调参（在GraphIt中反而不是重头），用OpenTuner（一作自造）
+* 自动调参（在GraphIt中反而不是重头），用OpenTuner（Halide一作造）
 
 ### 实验
 * 四个算法：PageRank、BFS、Connected Components、SSSP
@@ -240,22 +235,33 @@ $$\langle S, B, O, I\rangle:=\langle \text{SSG\_ID}, \text{BSG\_ID}, \text{Outer
 两种设计DSL的方法
 * 一种依赖于宿主语言
     - Halide依赖于C++编译到汇编/cuda
-    - Chisel依赖于Scala编译到Verilog
+    - [Chisel]({% post_url 2019-02-08-hll-and-hdl %})依赖于Scala编译到Verilog
 * 一种做更高层的抽象
     - GraphIt直接编译为C++
     - Spatial直接编译为Chisel
 
-各自的评价
+|       | Halide | GraphIt | Chisel+Firrtl | Spatial |
+| :---: | :---: | :---: | :---: | :---: |
+| 面向平台      | CPU/GPU | CPU | FPGA | FPGA |
+| 分离算法与执行 | √ | √ | × | ×(隐性) |
+| IR            | √ | × | √ | √ |
+| 编译优化      | 大量 | 几乎无 | 部分 | 大量 |
+| Autotuning   | √ | √ | × | √ |
+
 * Halide做得最好，全平台，大量优化，调度与计算分离
-* Chisel做得最烂，抽象比较弱，但是相比起传统HDL来说已经非常好了
+* Chisel抽象很弱，但是相比起传统HDL来说已经非常好了；后来又加上了Firrtl这个IR，规范了语义同时也便于做优化
 * GraphIt主要做了抽象，调度与计算分离，编译优化做得很少
 * Spatial做了大量优化，但是没有将设计与计算分离，或者是隐性分离了(?)
 
+GraphIt和Chisel更多算Metalanguage/Code Generator，而不是真正的compiler
+
 更加详细关于DSL的内容请见[领域特定语言]({% post_url 2019-02-12-dsl %})。
 
-## 参考资料
+## 参考文献
 1. Jonathan Ragan-Kelley (MIT), Connelly Barnes, Andrew Adams, Sylvain Paris, Frédo Durand, and Saman Amarasinghe, *Halide: A Language and Compiler for Optimizing Parallelism, Locality, and Recomputation in Image Processing Pipelines*, PLDI, 2013
 2. Yunming Zhang (MIT), Mengjiao Yang, Riyadh Baghdadi, Shoaib Kamil, Julian Shun, and Saman Amarasinghe, *GraphIt: A High-Performance Graph DSL*, OOPSLA, 2018
 3. David Koeplinger (Stanford), Christos Kozyrakis, Kunle Olukotun, et al., *Spatial: A Language and Compiler for Application Accelerators*, PLDI, 2018
 4. Tianqi Chen (UW), Thierry Moreau, Ziheng Jiang, Lianmin Zheng, Eddie Yan, Arvind Krishnamurthy, et al., *TVM: An Automated End-to-End Optimizing Compiler for Deep Learning*, OSDI, 2018
-5. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
+5. Jonathan Bachrach (UCB), Huy Vo, Brian Richards, Yunsup Lee, Andrew Waterman, Rimas Avižienis, John Wawrzynek, Krste Asanovic, et al., *Chisel: Constructing Hardware in a Scala Embedded Language*, DAC, 2012
+6. Adam Izraelevitz (UCB), Jack Koenig, Patrick Li, Richard Lin, Angie Wang, Albert Magyar, Donggyu Kim, Colin Schmidt, Chick Markley, Jim Lawson, Jonathan Bachrach, *Reusability is FIRRTL Ground: Hardware Construction Languages, Compiler Frameworks, and Transformations*, ICCAD, 2017
+7. Stencil code, <https://en.wikipedia.org/wiki/Stencil_code>
