--- a/_posts/2019-02-12-dsl.md
+++ b/_posts/2019-02-12-dsl.md
@@ -99,3 +99,8 @@ graph LR
 好的DSL
 * 语言的特性能够将并行性、局部性、同步性暴露出来(platform-independent)
 * 编译器能够自动提取这些知识并重定向到不同架构(platform-specific)
+
+## 语言(language)与框架(framework)的区别
+* 编程语言主要是一系列的语法语义规则
+* [框架]({% post_url 2019-01-31-deep-learning-and-graph-analytics-frameworks %})
+则是用现成的编程语言写成的一些库(library)/工具(tool)的集合，提供API接口，重用性高(reusable)，避免重复造轮子，可以直接调用
