--- a/_posts/2019-02-15-spa-1.md
+++ b/_posts/2019-02-15-spa-1.md
@@ -8,7 +8,8 @@ tag: compiler
 至于为什么选择这么一所名不见经传的大学的课程，一部分原因纯属偶然搜到，其他原因则有
 * 非常清晰易懂，幻灯片上图文并茂，力求将概念解释清楚
 * 没有繁琐的全套编译器的介绍，而着重讲解**中间优化器**的部分
-* 以**llvm**作为实验基石，是一门理论与实践相结合又十分前沿的课程
+* 基本的优化技术都有涉及，**广度**是足够的
+* 以**llvm**作为实验基石，同时也附带**抽象代数**、**函数式编程**等内容，是一门理论与实践相结合又十分前沿的课程
 * 附带讲讲编译器的**历史**，同时都附有**参考文献**
 
 <!--more-->
