--- a/_posts/2019-03-05-os-env.md
+++ b/_posts/2019-03-05-os-env.md
@@ -67,6 +67,8 @@ nasm hello.asm -o hello.bin
 dd if=hello.bin of=myname.img bs=1440k conv=notrunc
 ```
 
+注：`seek`参数可以指明写入第几个扇区
+
 ## 创建虚拟机
 1. 打开VirtualBox，点新建，名称XXXPC，类型Other，版本Other/Unknown
 2. 内存大小设最小4M即可
@@ -111,55 +113,8 @@ LBA=C×磁头总数\*每道扇区数+H\*每道扇区数+(S-1)
 
 查看二进制文件可以用WinHex工具，但不免费...
 
-一般来说，处理器加电或者复位之后，如果硬盘是首选的启动设备，则ROM-BIOS将试图读取硬盘的0面0道1扇区，即主引导扇区 (Main Boot Sector, MBR)。
-读取的主引导扇区数据有512字节，ROM-BIOS程序将它加载到逻辑地址`0x0000:0x7c00`处，也就是物理地址`0x07c00`处，然后判断它是否有效。
-（注意这里在汇编程序中体现为`org 7c00h`。非常重要！否则无法正确读取代码段/数据段！）
-
-一个**有效的主引导扇区**，其最后两字节应当是`0x55`和`0xAA`（且只能是512B）。ROM-BIOS程序首先检测这两个标志，如果主引导扇区有效，则以一个段间转移指令`jmp 0x0000:0x7c00`跳到那里继续执行。
-
 ### x86汇编语言
 详情见[x86汇编语言]({% post_url 2019-03-07-x86-asm %})
-
-### 显存
-#### 概述
-显存，即显示存储器(Video RAM, VRAM)。
-要显示的内容都需要先写入显存，显存同样是按字节访问的存储期间。
-
-两种基本工作模式
-* 图形模式：每个像素用01控制
-* 文本模式：直接用ASCII码控制显示字符的形状
-
-8086可以访问1MB内存，其中0x00000-9FFFF属于常规内存，由内存条提供； 0xF0000-0xFFFFF 由主板上的一个芯片提供，即ROM-BIOS。
-
-这样中间还有一个320KB的空洞，即0xA0000-0xEFFFF。
-传统上，这段地址空间由特定的外围设备来提供，其中就包括显卡。
-![VRAM]({{"/assets/images/OS/VRAM.PNG"|absolute_url}})
-
-由于历史的原因，所有在个人计算机上使用的显卡，在加电自检之后都会把自己初始化到80\*25 的文本模式。在这种模式下，屏幕上可以显示25行，每行80个字符，每屏总共2000个字符。
-
-所以，0xB8000-0xBFFFF 这段物理地址空间，是留给显卡的，由显卡来提供，用来显示文本。
-除非显卡出了毛病，否则这段空间总是可以访问的。
-如果显卡出了毛病，计算机一定不会通过加电自检过程，这就是传说中的严重错误，计算机是无法启动的，更不要说加载并执行主引导扇区的内容了。
-
-因此要访问显存，段寄存器要先指向`0xB800`。
-
-#### 80\*25文本模式颜色表
-屏幕上的每个字符都对应着显存中连续两个字节，前一字节是字符的ASCII码，后一字节是字符的显示属性。
-
-字符的显示属性分为两部分，低4位定义的是前景色，高4位定义的是背景色。K=0时不闪烁，K=1时闪烁。
-
-| R | G | B | 背景色 | 前景色(I=0) | 前景色(I=1) |
-| :---: | :---: | :---: | :---: | :---: | :---: |
-| 0 | 0 | 0 | 黑 | 黑 | 灰 |
-| 0 | 0 | 1 | 蓝 | 蓝 | 浅蓝 |
-| 0 | 1 | 0 | 绿 | 绿 | 浅绿 |
-| 0 | 1 | 1 | 青 | 青 | 浅青 |
-| 1 | 0 | 0 | 红 | 红 | 浅红 |
-| 1 | 0 | 1 | 品红 | 品红 | 浅品红 |
-| 1 | 1 | 0 | 棕 | 棕 | 黄 |
-| 1 | 1 | 1 | 白 | 白 | 亮白 |
-
-即连续两个字节为(ASCII)(KRGB)(IRGB)，如`0000 0000 0000 0101`代表黑底（背景）品红字（前景）ASCII码为`0x00`的字符。
 
 ### ASCII码表对照
 ![ascii](https://gss0.baidu.com/-fo3dSag_xI4khGko9WTAnF6hhy/zhidao/pic/item/060828381f30e924661d9e2c4a086e061d95f776.jpg)
