[blog] os, network
Update some os and networking materials

--- a/_posts/2019-03-07-x86-asm.md
+++ b/_posts/2019-03-07-x86-asm.md
@@ -159,6 +159,7 @@ END
 5. 循环控制
 * `loop`：cx不为0时循环
 6. 中断指令
+* `cli`/`sti`：关中断/开中断
 * `int <num>`：中断
 * `iret`：中断返回
 
@@ -199,3 +200,4 @@ zerobuf: times 64 db 0 ; executed n times
 6. Question: Compare 8086, 80386 and Pentium, <http://www.ques10.com/p/13578/compare-8086-80386-and-pentium-1/>
 7. 李忠，《x86汇编语言--从实模式到保护模式》
 8. org指令的作用，<https://blog.csdn.net/mirage1993/article/details/29908929>
+9. Stack frame layout on x86-64, <https://eli.thegreenplace.net/2011/09/06/stack-frame-layout-on-x86-64/>
