--- a/_posts/2019-03-11-os-ini.md
+++ b/_posts/2019-03-11-os-ini.md
@@ -35,6 +35,12 @@ ROM-BIOS的容量是有限的，当它完成自己的使命后，最后所要做
 * 如果有效，则第一个扇区，即主引导程序(master boot record, MBR)，将会被加载入RAM地址为`0000:7C00`的地方（也就是物理地址 0x07C00，自举bootstrap），BIOS跳转到`7C00`继续执行
 * OS应该被加载入RAM，或者是另外一个引导程序
 
+注：C中直接访问绝对地址
+```cpp
+int *var = (int*)0x40001000;
+*var = 4;
+```
+
 ## 显存
 ### 概述
 显存，即显示存储器(Video RAM, VRAM)。
@@ -79,6 +85,40 @@ ROM-BIOS的容量是有限的，当它完成自己的使命后，最后所要做
 * 各种外部命令：完成各种辅助功能的可执行文件
 
 ## 参考资料
+### 完整开发
 * 李忠，《x86汇编语言-从实模式到保护模式》
+* The little book about OS development, <https://littleosbook.github.io/>, <https://littleosbook.github.io/book.pdf>
+* Writing a Simple Operating System from Scratch, <https://www.cs.bham.ac.uk/~exr/lectures/opsys/10_11/lectures/os-dev.pdf>
+* Linux内核参考文档，<https://www.kernel.org/doc/html/latest/index.html>
+* Linux开发，<https://0xax.gitbooks.io/linux-insides/>
+* os-dev, <https://wiki.osdev.org/Main_Page>
+* Linux指令，<https://linux.die.net/man/>
+
+### 内核启动
 * Bootloaders(Wiki), <https://en.wikibooks.org/wiki/X86_Assembly/Bootloaders>
 * Booting an Operating System, <https://www.cs.rutgers.edu/~pxk/416/notes/02-boot.html>
+* 内核代号101 — 动手写自己的内核，<https://linux.cn/article-2926-1.html>
+* Linux 内核加载启动过程分析, <https://woshijpf.github.io/%E5%86%85%E6%A0%B8/2017/06/26/Linux-%E5%86%85%E6%A0%B8%E5%8A%A0%E8%BD%BD%E5%90%AF%E5%8A%A8%E8%BF%87%E7%A8%8B%E5%88%86%E6%9E%90.html>
+* 32位引导程序，<http://3zanders.co.uk/2017/10/16/writing-a-bootloader2/>
+* Create Your Own Kernel In C, <https://www.codeproject.com/Articles/1225196/Create-Your-Own-Kernel-In-C>
+* Making your own Linux Shell in C, <https://www.geeksforgeeks.org/making-linux-shell-c/>（C内核字符串处理）
+
+### 链接
+* Linker Script初探 - GNU Linker Ld手冊略讀，<http://wen00072.github.io/blog/2014/03/14/study-on-the-linker-script/>
+* 10分钟读懂linker scripts, <https://blog.louie.lu/2016/11/06/10%E5%88%86%E9%90%98%E8%AE%80%E6%87%82-linker-scripts/>
+* ld官方文档，<https://sourceware.org/binutils/docs/ld/>
+* Beginner's Guide to Linkers，<https://www.lurklurk.org/linkers/linkers.html>
+* x86_64_ldscripts, <https://dev.haiku-os.org/attachment/ticket/6308/x86_64_ldscripts.txt>
+* Linker Scripts, <http://www.scoberlin.de/content/media/http/informatik/gcc_docs/ld_3.html>
+
+### 工具
+* Debugging and Building Operating Systems, <https://www.codeproject.com/Articles/16582/Debugging-and-Building-Operating-Systems>, Boches
+* 16位编译器(OpenWatcom), <http://www.openwatcom.org/doc.php>
+
+### 表单
+* Scan code, <http://stanislavs.org/helppc/scan_codes.html>
+* Interrupts (BIOS/DOS), <https://jbwyatt.com/253/emu/8086_bios_and_dos_interrupts.html>
+
+### 其他
+* Basic x86 interrupts, <https://alex.dzyoba.com/blog/os-interrupts/>
+* 键盘中断，<http://inglorion.net/documents/tutorials/x86ostut/keyboard/>
