[blog] fix floppy disk
1. Fix floppy disk descriptions

--- a/_posts/2019-03-05-os-env.md
+++ b/_posts/2019-03-05-os-env.md
@@ -67,7 +67,7 @@ nasm hello.asm -o hello.bin
 dd if=hello.bin of=myname.img bs=1440k conv=notrunc
 ```
 
-注：`seek`参数可以指明写入第几个扇区
+注：`seek`参数指跳过前面几个扇区
 
 ## 创建虚拟机
 1. 打开VirtualBox，点新建，名称XXXPC，类型Other，版本Other/Unknown
@@ -81,38 +81,6 @@ dd if=hello.bin of=myname.img bs=1440k conv=notrunc
 ![virtual machine]({{"/assets/images/OS/virtual_machine_configuration.PNG"|absolute_url}})
 
 ## 其他补充
-### 软盘
-通常一个扇区尺寸是512B，可以看成是一个数据块(block)。
-1440KB=1474560B，1B=8b等同于两个hex位。
-1.44M的软盘一共包含2880个扇区。
-
-采用磁头、磁道和扇区这种模式来访问硬盘的方法称为CHS模式，但不是很方便。
-后来引入了逻辑块地址(Logical Block Address, LBA)的概念。
-现在市场上销售的硬盘，无论是哪个厂家生产的，都支持 LBA 模式。
-
-LBA 模式是由硬盘控制器在硬件一级上提供支持，所以效率很高，兼容性很好。
-LBA 模式不考虑扇区的物理位置（磁头号、磁道号），而是把它们全部组织起来统一编号。
-在这种编址方式下，原先的物理扇区被组织成逻辑扇区，且都有唯一的逻辑扇区号。
-
-比如，某硬盘有6个磁头，每面有1000个磁道，每磁道有17个扇区。那么：
-* 逻辑 0 扇区对应着 0 面 0 道 1 扇区
-* 逻辑 1 扇区对应着 0 面 0 道 2 扇区
-* ……
-* 逻辑 16 扇区对应着 0 面 0 道 17 扇区
-* 逻辑 17 扇区对应着 1 面 0 道 1 扇区
-* 逻辑 18 扇区对应着 1 面 0 道 2 扇区
-* ……
-* 逻辑 33 扇区对应着 1 面 0 道 17 扇区
-* 逻辑 34 扇区对应着 2 面 0 道 1 扇区
-* 逻辑 35 扇区对应着 2 面 0 道 2 扇区
-* ……
-* 逻辑 101999 扇区对应着 5 面 999 道 17 扇区，这也是整个硬盘上最后一个物理扇区
-
-这里面的计算方法是：
-LBA=C×磁头总数\*每道扇区数+H\*每道扇区数+(S-1)
-
-查看二进制文件可以用WinHex工具，但不免费...
-
 ### x86汇编语言
 详情见[x86汇编语言]({% post_url 2019-03-07-x86-asm %})
 
