--- a/_posts/2019-03-11-os-ini.md
+++ b/_posts/2019-03-11-os-ini.md
@@ -76,6 +76,33 @@ int *var = (int*)0x40001000;
 
 即连续两个字节为(ASCII)(KRGB)(IRGB)，如`0000 0000 0000 0101`代表黑底（背景）品红字（前景）ASCII码为`0x00`的字符。
 
+## 软盘
+通常一个扇区尺寸是512B，可以看成是一个数据块(block)。
+1440KB=1474560B，1B=8b等同于两个hex位。
+1.44M的软盘一共包含2880个扇区。
+
+采用磁头、磁道和扇区这种模式来访问硬盘的方法称为**CHS模式**，但不是很方便。
+后来引入了逻辑块地址(Logical Block Address, LBA)的概念。
+现在市场上销售的硬盘，无论是哪个厂家生产的，都支持**LBA模式**。
+
+LBA模式是由硬盘控制器在硬件一级上提供支持，所以效率很高，兼容性很好。
+LBA模式不考虑扇区的物理位置（磁头号、磁道号），而是把它们全部组织起来**统一编号**。
+在这种编址方式下，原先的物理扇区被组织成逻辑扇区，且都有唯一的逻辑扇区号。
+
+软盘有2个磁头(head)/面(side)，有80个柱面(cylinder)，每一个道(track)18个扇区(sector)。
+柱面和磁头从0开始计数，扇区从1开始计数。
+
+```cpp
+#define FLOPPY_144_SECTORS_PER_TRACK 18
+
+void lba_2_chs(uint32_t lba, uint16_t* cyl, uint16_t* head, uint16_t* sector)
+{
+    *cyl    = lba / (2 * FLOPPY_144_SECTORS_PER_TRACK);
+    *head   = ((lba % (2 * FLOPPY_144_SECTORS_PER_TRACK)) / FLOPPY_144_SECTORS_PER_TRACK);
+    *sector = ((lba % (2 * FLOPPY_144_SECTORS_PER_TRACK)) % FLOPPY_144_SECTORS_PER_TRACK + 1);
+}
+```
+
 ## DOS
 磁盘操作系统(Disk Operating System, DOS)主要有五部分组成
 * 引导程序(BOOT)：由格式化程序直接写入磁盘初始扇区
@@ -120,5 +147,6 @@ int *var = (int*)0x40001000;
 * Interrupts (BIOS/DOS), <https://jbwyatt.com/253/emu/8086_bios_and_dos_interrupts.html>
 
 ### 其他
+* 磁盘组织，<https://wiki.osdev.org/Floppy_Disk_Controller>
 * Basic x86 interrupts, <https://alex.dzyoba.com/blog/os-interrupts/>
 * 键盘中断，<http://inglorion.net/documents/tutorials/x86ostut/keyboard/>
