[Summary] Parallel computing
1. Update Summary - Parallel Computing

--- a/_posts/2019-03-03-AVX.md
+++ b/_posts/2019-03-03-AVX.md
@@ -9,7 +9,7 @@ tag: [tools, parallel]
 <!--more-->
 
 ## 历史
-见[并行编程]({% post_url 2019-02-22-parallel-programming %})
+见[并行编程]({{ site.baseurl }}/summary/parallel-computing)
 * MME, 1996
 * SSE, 1999
 * AVX, 2008
