--- a/_posts/2019-03-11-os-ini.md
+++ b/_posts/2019-03-11-os-ini.md
@@ -116,6 +116,11 @@ void lba_2_chs(uint32_t lba, uint16_t* cyl, uint16_t* head, uint16_t* sector)
 * 李忠，《x86汇编语言-从实模式到保护模式》
 * The little book about OS development, <https://littleosbook.github.io/>, <https://littleosbook.github.io/book.pdf>
 * Writing a Simple Operating System from Scratch, <https://www.cs.bham.ac.uk/~exr/lectures/opsys/10_11/lectures/os-dev.pdf>
+* Arjunsreedharan, <https://arjunsreedharan.org/>
+* OS开发参考目录，<https://nithinbekal.com/notes/os/>
+* Writing Your Own Toy Operating System: Guides & Tutorials, <http://www.independent-software.com/operating-system-development.html>
+* Bona fide OS Developer, <http://www.osdever.net/tutorials/>
+* CMSC 412,  <https://www.cs.umd.edu/~hollings/cs412/s02/>
 * Linux内核参考文档，<https://www.kernel.org/doc/html/latest/index.html>
 * Linux开发，<https://0xax.gitbooks.io/linux-insides/>
 * os-dev, <https://wiki.osdev.org/Main_Page>
