[Fix] Fix bugs and add some materials
1. Fix bugs in "more"
2. Add materials to FPGA, OS, and C programming

--- a/_posts/2019-03-07-x86-asm.md
+++ b/_posts/2019-03-07-x86-asm.md
@@ -88,8 +88,8 @@ mov byte[ebx], 2
 
 ### Caller规则
 1. 在调用函数/子程序(subroutine)之前，先保存特定寄存器的状态(caller-saved)（包括`eax`、`ecx`、`edx`）
-2. 将要传的参数堆栈（注意要逆序，最后一个参数最先入）。因为栈往下生长，因此第一个参数会被存在最低的地址
-3. 调用函数(call)
+2. 将要传的参数堆栈（注意要逆序，**最后一个参数最先入**）。因为栈往下生长，因此第一个参数会被存在最低的地址
+3. 调用函数，`call`会将返回地址`eip`压入栈中
 4. 返回时先把参数移出栈，然后将原来保存的寄存器再pop出来
 
 ### Callee规则
@@ -164,6 +164,10 @@ END
 * `iret`：中断返回
 
 通过标号加方括号访问内存，如`mov ax, [mem]`
+
+还有一些比较常见的特殊指令：
+* `leave`：等价于恢复堆栈，即`mov esp,ebp\n\t pop ebp`
+
 
 ## nasm
 The netwide assembler(NASM)是80x86和x86-64系列的汇编器
