--- a/_posts/2019-03-11-os-ini.md
+++ b/_posts/2019-03-11-os-ini.md
@@ -125,6 +125,9 @@ void lba_2_chs(uint32_t lba, uint16_t* cyl, uint16_t* head, uint16_t* sector)
 * Linux开发，<https://0xax.gitbooks.io/linux-insides/>
 * os-dev, <https://wiki.osdev.org/Main_Page>
 * Linux指令，<https://linux.die.net/man/>
+* C标准头文件(FreeBSD实现)
+	- <https://svnweb.freebsd.org/base/head/lib/libc/stdio/>
+	- <https://android.googlesource.com/platform/bionic/+/ics-mr0/libc/stdio>
 
 ### 内核启动
 * Bootloaders(Wiki), <https://en.wikibooks.org/wiki/X86_Assembly/Bootloaders>
