[blog] Update some materials

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -20,3 +20,9 @@ git stash -u -k # the most important step
 git commit --date="Thu Jun 27 15:00:00 2019 +0800" -m "xxx"
 git stash pop # pop out modification
 ```
+
+## 子模块
+* 添加子模块：`git submodule add <url>`
+* 初始化子模块：`git submodule init`
+* 拉取子模块到本地仓库：`git submodule update`
+* 更新子模块内容：进入子模块文件夹后，`git pull`
