[blog] Update GRE

--- a/_posts/2019-02-11-gre-og.md
+++ b/_posts/2019-02-11-gre-og.md
@@ -26,11 +26,43 @@ tags: abroad
 * WW QVQVQ
 * WW VQVQV
 
+## 填空
+### 题型与评分
+每个section共10题，包括三种题型
+* Reading Comprehension
+* Text Completion：5选1；2空3选1；3空3选1
+* Sentence Equivalence：6选2
+
+一般第一个部分题型稳定
+| 题型 | 文本填空 | 阅读 | 句子平衡 | 阅读 |
+| :-:  | :-: | :-: | :-: | :-: |
+| 题目数量 | 6 | 6 | 4 | 4 |
+| 题型数量 | 单空2<br/>双空3<br/>三空 | 短1(2)<br/>长1(4) | / | 单1(1)<br/>中1(3) |
+
+第二个section难度
+| 难度 | 对应分数 | 对应第一个section正确率 |
+| easy | 130-154 | 0-6 |
+| medium | 142-162 | 7-12 |
+| hard | 150-170 | 13-20 |
+
+填空的考察重点为**题干中寻证**，因此**同义信息**只会不断出现
+
+### 方法
+一个词感情色彩的褒贬好坏和一个词的趋势正负不一定等同
+* 如，改正(correct)错误是好事，但是动词的趋势是负的（不要错误）
+
+做五选一题一种取巧的方法是看趋势正负（并列结构）
+
+## 阅读
+每个section共10题
+
 ## 写作
 ### Issue
 论述文，赞同或不赞同观点
 
-Sample
+#### 题目及写作思路
+
+#### Sample
 > As people rely more and more on technology to solve problems, the ability of humans to think for themselves will surely deteriorate.<br/><br/>
 Discuss the extent to which you agree or disagree with the statement and explain your reasoning for the position you take. In developing and supporting your position, you should consider ways in which the statement might or might not hold true and explain how these considerations shape your position
 
@@ -54,7 +86,31 @@ Thus, this essay meets all the requirements for receiving a top score, a 6.
 ### Argument
 批判性思维，判断文章逻辑/推理严谨性
 
-Sample
+#### 题目
+不同指令(instruction)：
+1. Write a response in which you discuss what <font color="red">questions</font> would need to be addressed in order to decide whether implementing the recommendation is likely to have the predicted result and explain how the answers to those questions would help to evaluate the recommendation
+2. Write a response in which you examine the stated and/or unstated <font color="red">assumptions</font> of the argument. Be sure to explain how the argument depends on these assumptions and what the implications are for the argument if the assumptions prove unwarranted.
+3. Write a response in which you discuss what specific <font color="red">evidence</font> is needed to evaluate the argument and explain how the evidence would weaken or strengthen the argument.
+4. Write a response in which you discuss one or more alternative <font color="red">explanations</font> that could rival the proposed explanation and explain how your explanation(s) can plausibly account for the fact presented in the argument.
+
+#### 写作思路
+* 首段：重述原文结论+指出漏洞
+> The author/... draws a conclusion that ..., but it seems the author is too quick to jump to that conclusion since there are fallacies in the letter.
+* 每段：指出存在问题+文中摘取+质疑+可能性\*2
+	- perhaps / maybe / another possibility
+* 结尾：总结
+> It seems extremely rush to ..., before the effects can be fully observed and interpreted.<br/>
+The assumptions listed above need to be carefully examined.
+
+写作套路
+1. One of the questions needs to be answered is ...
+2. The first assumption is 
+
+常用词组
+* rife with holes and assumptions
+* not persuasice enough
+
+#### Sample
 
 > In surveys Mason City residents rank water sports (swimming, boating, and fishing) among their favorite recreational activities. The Mason River flowing through the city is rarely used for these pursuits, however, and the city park department devotes little of its budget to maintaining riverside recreational facilities. For years there have been complaints from residents about the quality of the river’s water and the river’s smell. In response, the state has recently announced plans to clean up Mason River. Use of the river for water sports is, therefore, sure to increase. The city government should for that reason devote more money in this year’s budget to riverside recreational facilities.<br/><br/>
 Write a response in which you examine the stated and/or unstated assumptions of the argument. Be sure to explain how the argument depends on the assumptions and what the implications are if the assumptions prove unwarranted.
