[blog] Update GRE writing

--- a/_posts/2019-02-11-gre-og.md
+++ b/_posts/2019-02-11-gre-og.md
@@ -34,12 +34,14 @@ tags: abroad
 * Sentence Equivalence：6选2
 
 一般第一个部分题型稳定
+
 | 题型 | 文本填空 | 阅读 | 句子平衡 | 阅读 |
 | :-:  | :-: | :-: | :-: | :-: |
 | 题目数量 | 6 | 6 | 4 | 4 |
 | 题型数量 | 单空2<br/>双空3<br/>三空 | 短1(2)<br/>长1(4) | / | 单1(1)<br/>中1(3) |
 
 第二个section难度
+
 | 难度 | 对应分数 | 对应第一个section正确率 |
 | easy | 130-154 | 0-6 |
 | medium | 142-162 | 7-12 |
@@ -57,10 +59,73 @@ tags: abroad
 每个section共10题
 
 ## 写作
+写作包括以下两个部分
+* Issue: 30min, 500+ word
+* Argument: 30min, 500+ word
+
+评分有几个点需要注意：
+* 整体判分：只会通过已完成的部分判分（字数一定要多）
+* 例子没有等级之分：伪名人、真名人、个人、群体、假想例
+
 ### Issue
 论述文，赞同或不赞同观点
+* 双边讨论，涉及题目中所有内容（前提、目的）
+* 不要起因经过结果
+* 句与句之间加逻辑词，句末接句首
+* 词汇准确性，锦上添花
 
 #### 题目及写作思路
+1. (70%) Write a response in which you discuss the extent to which you agree or disagree with the statement and explain your reasoning for the position you take. In developing and supporting your position, you should consider ways in which the statement <font color="red">might</font> or might not hold true and explain how these considerations shape your position.
+2. Write a response in which you discuss which view more closely aligns with your own position and explain your reasoning for the position you take. In developing and supporting your position, you should address <font color="red">both</font> of the views presented.
+3. Write a response in which you discuss your views on the policy and explain your reasoning for the position you take. In developing and supporting your position, you should consider the possible <font color="red">consequences</font> of implementing the policy and explain how these consequences shape your position.
+4. Write a response in which you discuss the extent to which you agree or disagree with the recommendation and explain your reasoning for the position you take. In developing and supporting your position, describe specific <font color="red">circumstances</font> in which adopting the recommendation would or would not be advantageous and explain how these examples shape your position.
+5. Write a response in which you discuss the extent to which you agree or disagree with the claim. In developing and supporting your position, be sure to address the most compelling reasons and/or examples that could be used to <font color="red">challenge</font> your position.
+6. <font color="red">Claim</font>: Universities should require every student to take a variety of courses outside the student's major field of study.<br/><font color="red">Reason</font>: Acquiring knowledge of various academic disciplines is the best way to become truly educated.<br/>Write a response in which you discuss the extent to which you agree or disagree with the claim and the reason on which that claim is based.
+
+
+| 题目 | 写作布局 |
+| :--: | :--: |
+| might | 双边<br/>**开头+对方观点+己方观点1+己方观点2+结尾** |
+| both | 双边同上 |
+| consequences | 双边同上 |
+| circumstances | 双边中立<br/>**开头+成立情况+前提段+不成立情况1+不成立情况2+结尾** |
+| challenge | 单边驳论<br/>**开头+己方观点+驳论段1+驳论段2+结尾** |
+| claim+reason | 分别分析<br/>**开头+分析claim+分析reason+结尾** |
+
+破题思路：
+* 将题目中所有名词画出来**具体化**
+* 写框架，左边是立场/例子，右边是理由（都是直接的因果关系）
+* 注意时刻记得**点题**
+
+#### Might/Both/Consequences
+* 开头：名词解释(->双边观点->自己观点)
+* 中间段：理由+(逻辑)+例子(2-3个)
+	- 2句点题+2句证明，一个例子3-4/5-6行(3/2例)
+	- 点题意味着**具体化**
+	- For example / Same case can also seen / n., 插入语 / To further that point, ...
+
+#### Circumstances
+| 成立 | **会得到什么结果** |
+|      | 成立前提（过渡-承上启下） |
+| 前提不成立 | 会得到什么结果 |
+
+* 引入话题：It is widely hold that ... However, this should be based on different circumstances.
+* 成立情况：This statement is true when
+* 前提段：... only work well in situations when ... As we will discuss below, if ...
+* In conclusion, the given statement cannot be justified unless the circumstances analyzed above are considered.
+
+#### Challenge
+
+| 己方观点 | 己方理由 |
+| 对方观点 | 反驳理由<br/>讲另一边好处，而不要讲己方坏处<br/>要直接反，不要做任何让步 |
+
+* Some people will argue that ..., however
+* Although ..., ...
+
+#### Claim+Reason
+* 不用写关系，第一段直接表明对两者观点
+* 下面分别写立场和理由（每段3例）
+* 最后**总结立场**分开总结
 
 #### Sample
 > As people rely more and more on technology to solve problems, the ability of humans to think for themselves will surely deteriorate.<br/><br/>
@@ -85,9 +150,12 @@ Thus, this essay meets all the requirements for receiving a top score, a 6.
 
 ### Argument
 批判性思维，判断文章逻辑/推理严谨性
+* 找到逻辑漏洞（至少三个）：每个句子一定有错，可能有多个错
+* 尽可能多地给支撑（提供尽可能多的可能性及详细例子->细节具体化）
+* 逻辑条理
 
 #### 题目
-不同指令(instruction)：
+不同指令(instruction)：一定要正面回应题目要求
 1. Write a response in which you discuss what <font color="red">questions</font> would need to be addressed in order to decide whether implementing the recommendation is likely to have the predicted result and explain how the answers to those questions would help to evaluate the recommendation
 2. Write a response in which you examine the stated and/or unstated <font color="red">assumptions</font> of the argument. Be sure to explain how the argument depends on these assumptions and what the implications are for the argument if the assumptions prove unwarranted.
 3. Write a response in which you discuss what specific <font color="red">evidence</font> is needed to evaluate the argument and explain how the evidence would weaken or strengthen the argument.
@@ -102,13 +170,41 @@ Thus, this essay meets all the requirements for receiving a top score, a 6.
 > It seems extremely rush to ..., before the effects can be fully observed and interpreted.<br/>
 The assumptions listed above need to be carefully examined.
 
-写作套路
-1. One of the questions needs to be answered is ...
-2. The first assumption is 
+#### 常见逻辑错误
+数据漏洞：可能性->高中低
+* 缺数据支持：significantly decreased expenses, lower-priced products
+* 缺数据总数：15% of the nearly 1,200 workers, rank the 2nd, majority
+* Profit = Revenue - Cost
 
-常用词组
-* rife with holes and assumptions
-* not persuasice enough
+因果类：**先质疑原因，再质疑结果**
+* 错误假设原因存在：falsely assume that... / doen't mean the reason will lead to the desired effect / blind assumption of cause-and-effect relationship
+	- 有其他原因导致**结论**
+* 本句结果也不一定是对的：即不一定通过某种方式实现
+	- 结果与结论的关联
+
+> e.g.：因为便宜著称，因此不能通过提价盈利。
+* 质疑原因：错误假设店以便宜著称，可能性：员工友好、影片讲解、试看服务
+* 质疑结果：仍有提价空间，可能性：价格提升5%
+
+条件类：**先质疑条件是否适得其反，再质疑是否需要其他条件达成目的**
+* 前提条件：可能起到反作用，if / can / will
+* 条件也不是唯一的：想其他条件
+
+错误类比：主要分析两者不同之处，false analogy between / hasty generalization
+
+可能性速成
+* 销售类：location, product, marketing
+
+#### 写作套路
+1. sb. draws a conclusion that ... However, it seems sb. is too quick to jump to the conclusion and there are lots of fallacies in the argument.
+2. The argument seems rife with holes and assumptions / lacks evidence making the conclusion doubtable.
+3. One of the **questions** needs to be answered / asked / raised is ...
+4. The first **assumption** the author implies / makes is ... (将问句转为陈述句)
+5. One of the **evidences** needs to be provided is ...(问句转陈述句)
+6. One **explanation** is ...(找原因支撑提供的事实，见Argument2恒河猴)
+7. The author points out / writes / mentions / implies / maintains
+8. It seems the argument is not persuasice enough to ...
+9. It seems too rush to implement ..., before the effects can be fully observed and analyzed.
 
 #### Sample
 
