[blog] Update previous blogs

--- a/_posts/2019-02-11-gre-og.md
+++ b/_posts/2019-02-11-gre-og.md
@@ -99,10 +99,16 @@ tags: abroad
 
 #### Might/Both/Consequences
 * 开头：名词解释(->双边观点->自己观点)
+	- The statement claims that ...
+	- 开头一定要精炼，同时旗帜鲜明表明立场
 * 中间段：理由+(逻辑)+例子(2-3个)
 	- 2句点题+2句证明，一个例子3-4/5-6行(3/2例)
 	- 点题意味着**具体化**
+	- 例子的相关性，即论据和论证说理的相关性，举例后一定要阐明
 	- For example / Same case can also seen / n., 插入语 / To further that point, ...
+* 结尾段：总结重申观点
+	- Without A, ... ; Without B, ... ; Thus, ...
+	- In sum, from what I discussed above, we might draw a conclusion that ...
 
 #### Circumstances
 | 成立 | **会得到什么结果** |
@@ -124,6 +130,9 @@ tags: abroad
 
 #### Claim+Reason
 * 不用写关系，第一段直接表明对两者观点
+	- As the claim states, ...
+	- As for the reason, ...
+	- I think / In my point of view / 
 * 下面分别写立场和理由（每段3例）
 * 最后**总结立场**分开总结
 
